--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
     <title>assignment-one</title>
 </head>
 <body>
-    
+     <header>
+        <nav>
+            <div>
+                <img src="image/logo.png" alt="logo">
+            </div>
+            <button class="btn">sign up</button>
+        </nav>
+        <div class="banner">
+            <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="btn">Stay focused</button>
+        </div>
+     </header>
+     <main></main>
+     <footer></footer>
 </body>
 </html>
