--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
             <button class="btn">Stay focused</button>
         </div>
      </header>
-     <main></main>
+     <main>
+        <section class="action">
+            <div class="action-content">
+            <h3>See It in Action</h3>
+            <p>Explore the live preview and imagine your brand in this bold new look.</p>
+            <button class="btn">Launch Live Preview</button>
+            </div>
+            <div>
+                <img src="./image/wc-mini.png" alt="">
+            </div>
+        </section>
+     </main>
      <footer></footer>
 </body>
 </html>
