--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
                 <img src="./image/wc-mini.png" alt="">
             </div>
         </section>
+        <section class="user">
+            <h1>Joined Thousands of Productive Users</h1>
+            <div class="user-n">
+                <div class="item">
+                    <h2>50K</h2>
+                    <p>Active Users</p>
+                </div>
+                <div class="item">
+                    <h2>50K</h2>
+                    <p>Active Users</p>
+                </div>
+                <div class="item">
+                    <h2>50K</h2>
+                    <p>Active Users</p>
+                </div>
+            </div>
+        </section>
      </main>
      <footer></footer>
 </body>
