--- a/index.html
+++ b/index.html
@@ -49,6 +49,71 @@
                 </div>
             </div>
         </section>
+        <section class="compliment">
+            <h1>What our users say</h1>
+            <div class="compliment-all">
+            <div class="compliment-one">
+            <div>
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+            </div>
+            <div>
+                <h3>Loved by Designers</h3>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            </div>
+            <div class="compliment-data">
+                <img src="./image/avatar.png" alt="">
+                <div>
+                    <h6>Reviewer name</h6>
+                    <p>Date</p>
+                </div>
+            </div>
+            </div>
+               <div class="compliment-one">
+            <div>
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+            </div>
+            <div>
+                <h3>Loved by Designers</h3>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            </div>
+            <div class="compliment-data">
+                <img src="./image/avatar.png" alt="">
+                <div>
+                    <h6>Reviewer name</h6>
+                    <p>Date</p>
+                </div>
+            </div>
+            </div>
+               <div class="compliment-one">
+            <div>
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+                <img src="./image/icon-star.png" alt="">
+            </div>
+            <div>
+                <h3>Loved by Designers</h3>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            </div>
+            <div class="compliment-data">
+                <img src="./image/avatar.png" alt="">
+                <div>
+                    <h6>Reviewer name</h6>
+                    <p>Date</p>
+                </div>
+            </div>
+            </div>
+            </div>
+        </section>
      </main>
      <footer></footer>
 </body>
