--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
             </div>
             </div>
         </section>
+        <section class="focus">
+            <div class="f-content">
+                <h1>Ready to focus better</h1>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn">Ger Started Free</button>
+                <img src="./image/wc-big.png" alt="">
+            </div>
+        </section>
      </main>
      <footer></footer>
 </body>
