--- a/index.html
+++ b/index.html
@@ -122,7 +122,41 @@
                 <img src="./image/wc-big.png" alt="">
             </div>
         </section>
+        <section class="contact">
+  <div class="contact-container">
+    <div class="contact-text">
+      <h1>Let’s Get in Touch</h1>
+    </div>
+    <form action="" class="contact-form">
+      <div class="form-group">
+        <label for="name">Your name</label>
+        <input type="text" id="name" placeholder="Enter your name">
+      </div>
+      <div class="form-group">
+        <label for="email">Your email</label>
+        <input type="email" id="email" placeholder="Enter your email">
+      </div>
+      <div class="form-group">
+        <label for="message">Your message</label>
+        <textarea id="message" cols="30" rows="6" placeholder="Write your message"></textarea>
+      </div>
+      <input class="btn-primary" type="submit" value="Submit">
+    </form>
+  </div>
+</section>
+      
      </main>
-     <footer></footer>
+     <footer>
+        <div>
+            <img src="./image/logo.png" alt="">
+            <p class="f-p">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        </div>
+        <div class="f-details">
+            <p>Home</p>
+            <p>About</p>
+            <p>How it works</p>
+            <p>services</p>
+        </div>
+     </footer>
 </body>
 </html>
